WanaLyzer/out/numpy/typing/tests/data/pass/ndarray_misc.pyi
import numpy as np
from _typeshed import Incomplete
from typing import Any

class SubClass(np.ndarray): ...

i4: Incomplete
A: np.ndarray[Any, np.dtype[np.int32]]
B0: Incomplete
B1: Incomplete
B2: Incomplete
C: np.ndarray[Any, np.dtype[np.int32]]
D: Incomplete
void: Incomplete
