WanaLyzer/out/numpy/typing/tests/data/fail/random.pyi
import numpy as np
from typing import Any

SEED_FLOAT: float
SEED_ARR_FLOAT: np.ndarray[Any, np.dtype[np.float64]]
SEED_ARRLIKE_FLOAT: list[float]
SEED_SEED_SEQ: np.random.SeedSequence
SEED_STR: str
seed_seq: np.random.bit_generator.SeedSequence
